# dlme-airflow

./: .codeclimate.yml  .coveragerc  .dockerignore  .gitignore  .rubocop.yml  .rubocop_todo.yml  Capfile  Dockerfile  Dockerfile.proxy  Gemfile  README.md  catalog.yaml  compose.prod.yaml  compose.yaml  docker-compose.prod.yaml  docker-compose.yaml  near-east.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.autoupdate/: preupdate
.circleci/: config.yml
catalogs/: aims.yaml  american_numismatic_society.yaml  ans.yaml  aub.yaml  auc.yaml  auc_iiif.yaml  auc_oai.yaml  bnf.yaml  bodleian.yaml  brooklyn.yaml  cambridge.yaml  catalog.yaml  csic.yaml  dasi.yaml  goettingen.yaml  gottingen.yaml  harvard.yaml  hathi.yaml  ifpo.yaml  koch.yaml  koç.yaml  lau.yaml  lebanese_american_university.yaml  leiden.yaml  loc.yaml  manchester.yaml  mcgill.yaml  met.yaml  michigan.yaml  newcastle.yaml  openiti.yaml  openn.yaml  penn.yaml  penn_museum.yaml  princeton.yaml  qalamos.yaml  qnl.yaml  sakip_sabanci.yaml  sakip_sabanci_museum.yaml  shahre_farang.yaml  (+7 more)
config/: airflow.cfg  deploy.rb
config/deploy/: dev.rb
dags/: aims.py  aims_harvester.py  aub.py  aub_harvester.py  copydir.py
dlme_airflow/: config.py
dlme_airflow/config/: settings.yml
dlme_airflow/dags/: 01_clone_dlme_metadata.py  02_aub_oai_harvester.py  02_automated_transform_example.py  02_trigger_transform.py  aims_harvester.py  aub_harvester.py  bodleian.py  catalog_etl_pipeline.py  clone_dlme_metadata.py  external_trigger.py  harvest_aub.py  harvest_auc.py  harvest_bodleian.py  harvest_catalog.py  intake_harvester.py  maintenance_clone_dlme_metadata.py  maintenance_purge_transforms.py  oai_aub_harvester.py  oai_auc_harvester.py  oai_csic_harvester.py  oai_harvard_harvester.py  oai_manchester_harvester.py  verify_git_branch.py
dlme_airflow/drivers/: __init__.py  feed.py  hathi_trust.py  iiif_json.py  iiif_json_v3.py  json.py  oai_xml.py  sequential_csv.py  xml.py
dlme_airflow/harvester/: aims.py  aub.py  copydir.py  csv.py  iiif_json.py  oai.py  source_harvester.py  source_post_harvester.py  validations.py
dlme_airflow/helpers/: verify_branch.sh
dlme_airflow/models/: collection.py  provider.py
dlme_airflow/services/: harvest_dag_generator.py  source_etl_generator.py
dlme_airflow/sub_dags/: validate_dlme_metadata.py
dlme_airflow/task_groups/: collect_metadata_changes.py  detect_metadata_changes.py  etl.py  etl_pipeline_task_group.py  harvest.py  harvest_report.py  iiif_harvest.py  index.py  post_harvest.py  transform.py  transform_and_index.py  validate_dlme_metadata.py
dlme_airflow/tasks/: archive.py  check_equality.py  index.py  (+15 more)
startup/: entrypoint_init.sh  entrypoint_scheduler.sh  entrypoint_webserver.sh  entrypoint_worker.sh  requirements.txt
tests/: conftest.py  test_bin_get.py
(+123 files in other folders)
