
[tool.poetry]
name = "dlme-airflow"
version = "0.1.0"
description = "ETL Pipeline management for the Digital Library of the Middle East (DLME)"
authors = ["Aaron Collier <aaron.collier@stanford.edu>"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.3"
Sickle = "^0.7.0"
intake = {extras = ["dataframe"], version = "^0.6.2"}
aiohttp = "^3.7.4.post0"
jsonpath_ng = "^1.5.3"
apache-airflow = {extras = ["amazon"], version = "^2.4.0"}
feedparser = "^6.0.2"
validators = "^0.18.2"
dominate = "^2.6.0"
pandas = "^1.4.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"

# pinned to speed up docker build:
# see: https://pip.pypa.io/en/stable/topics/dependency-resolution/#possible-ways-to-reduce-backtracking
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
types-PyYAML = "^6.0.12"
types-requests = "^2.28.11"
jsonschema = "^4.16.0"
requests-mock = "^1.10.0"
mock = "^4.0.3"
types-mock = "^4.0.15"
yamllint = "^1.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
