
[project]
name = "dlme-airflow"
version = "0.1.0"
description = "ETL Pipeline management for the Digital Library of the Middle East (DLME)"
authors = ["Aaron Collier <aaron.collier@stanford.edu>"]
license = "Apache2"
requires-python = ">= 3.12"
dependencies = [
    "aiohttp",
    "apache-airflow-providers-docker",
    "beautifulsoup4",
    "dominate",
    "feedparser",
    "intake",
    "jsonpath_ng",
    "lxml",
    "lxml_html_clean",
    "numpy<2.0.0",
    "pandas",
    "Pillow",
    "python-dotenv",
    "requests",
    "Sickle",
    "validators"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
