
[project]
name = "dlme_airflow"
version = "0.1.0"
description = "ETL Pipeline management for the Digital Library of the Middle East (DLME)"
authors = [
    { name = "Aaron Collier", email = "aaron.collier@stanford.edu" },
    { name = "Jacob Hill", email = "jtim@stanford.edu" }
]
license = { text = "Apache2" }
requires-python = ">= 3.12"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "dominate",
    "feedparser",
    "intake",
    "jsonpath_ng",
    "lxml",
    "lxml_html_clean",
    "numpy",
    "pandas",
    "Pillow",
    "python-dotenv",
    "requests",
    "Sickle",
    "validators"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"

[tool.setuptools]
packages = ["dlme_airflow"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
